--- a/css/public.css
+++ b/css/public.css
@@ -250,13 +250,15 @@ body.menuclose .content {
   padding-bottom: 10px;
 }
 .content .contitem#documentblock,
-.content .contitem#scheduleblock {
+.content .contitem#scheduleblock,
+.content .contitem#stockblock {
   padding-top: 10px;
 }
 .content .contitem .newsContainer,
 .content .contitem .taskContainer,
 .content .contitem .documentContainer,
-.content .contitem .scheduleContainer {
+.content .contitem .scheduleContainer,
+.content .contitem .stockContainer {
   position: relative;
   width: 100%;
   height: 100%;
@@ -265,7 +267,8 @@ body.menuclose .content {
 .content .contitem .newsContainer .title,
 .content .contitem .taskContainer .title,
 .content .contitem .documentContainer .title,
-.content .contitem .scheduleContainer .title {
+.content .contitem .scheduleContainer .title,
+.content .contitem .stockContainer .title {
   font-weight: normal;
   color: #fff;
   font-size: 14px;
@@ -573,4 +576,39 @@ body.menuclose .content {
   background-color: #ffc72c;
   font-size: 12px;
   border-radius: 10px;
+}
+.content .contitem .stockContainer {
+  padding-top: 45px;
+}
+.content .contitem .stockContainer .title {
+  position: absolute;
+  top: 0;
+  height: 45px;
+  line-height: 45px;
+  width: 100%;
+  padding: 0 15px;
+}
+.content .contitem .stockContainer .title span {
+  color: #cf2c1b;
+}
+.content .contitem .stockContainer .title a {
+  display: block;
+  position: absolute;
+  right: 10px;
+  top: -5px;
+  color: #cf2c1b;
+  font-size: 25px;
+}
+.content .contitem .stockContainer .title img {
+  vertical-align: middle;
+  margin-right: 10px;
+}
+.content .contitem .stockContainer .listContainer {
+  width: 100%;
+  height: 100%;
+  padding: 0 15px 15px;
+}
+.content .contitem .stockContainer .listContainer img {
+  width: 100%;
+  height: 100%;
 }
