--- a/css/media768.less
+++ b/css/media768.less
@@ -67,10 +67,32 @@
 					padding: 15px;
 					&>div{
 						width: 20%;
-						padding: 10px;
+						height: 50%;
+						padding: 10px 20px;
 						float: left;
 					}
 				}
+				.item{
+					&.newMsg::before{
+						width: 30px;
+						height: 30px;
+						line-height: 30px;
+						font-size: 15px;
+					}
+				}
+			}
+			&#documentblock,&#scheduleblock,&#stockblock{
+				width: 50%;
+				height: 300px;
+			}
+			&#documentblock{
+				padding-right: 10px;
+			}
+			&#scheduleblock{
+				padding-left: 10px;
+			}
+			&#stockblock{
+				padding-left: 20px;
 			}
 		}
 	}
@@ -95,13 +117,30 @@
 				&>div{
 					width: 100%;
 					height: 100%;
-					padding: 15px;
+					padding: 10px;
 					&>div{
 						width: 25%;
 						padding: 10px;
 						float: left;
 					}
+				.item{
+					font-size: 15px;
+					&.newMsg::before{
+						width: 20px;
+						height: 20px;
+						line-height: 20px;
+						font-size: 12px;
+					}
 				}
+				}
+			}
+			&#taskblock{
+				height: 200px;
+			}
+			&#documentblock,&#scheduleblock,&#stockblock{
+				width: 100%;
+				height: 200px;
+				padding: 0 0 20px;
 			}
 		}
 	}
