--- a/css/media768.less
+++ b/css/media768.less
@@ -49,6 +49,9 @@
 			padding-bottom: 16px;
 		}
 	}
+	.slideBox{
+		width: 150% !important;
+	}
 	.content{
 		.contitem{
 			width: 100%;
@@ -82,7 +85,7 @@
 				}
 			}
 			&#documentblock,&#scheduleblock,&#stockblock{
-				width: 50%;
+				width: 33.3%;
 				height: 300px;
 			}
 			&#documentblock{
