--- a/css/public.css
+++ b/css/public.css
@@ -240,6 +240,20 @@ body.menuclose .content {
 .two-third {
   width: 66.6%;
 }
+.slideContainer {
+  width: 100%;
+  height: 50%;
+  overflow: hidden;
+}
+.slideContainer > div {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+}
+.slideContainer .slideBox {
+  width: 100%;
+  height: 100%;
+}
 .content .contitem {
   height: 50%;
   float: left;
@@ -253,6 +267,7 @@ body.menuclose .content {
 .content .contitem#scheduleblock,
 .content .contitem#stockblock {
   padding-top: 10px;
+  height: 100%;
 }
 .content .contitem .newsContainer,
 .content .contitem .taskContainer,
