--- a/css/public.less
+++ b/css/public.less
@@ -264,6 +264,20 @@ body.menuclose{
 .two-third{
 	width:66.6%;
 }
+.slideContainer{
+			width: 100%;
+			height: 50%;
+			overflow: hidden;
+			&>div{
+				width: 100%;
+				height: 100%;
+				overflow: scroll;
+			}
+			.slideBox{
+				width: 100%;
+				height: 100%;
+			}
+		}
 .content{
 	.contitem{
 		height:50%;
@@ -274,6 +288,7 @@ body.menuclose{
 		}
 		&#documentblock,&#scheduleblock,&#stockblock{
 			padding-top: 10px;
+			height: 100%;
 		}
 		.newsContainer,.taskContainer,.documentContainer,.scheduleContainer,.stockContainer{
 			position: relative;
@@ -400,6 +415,7 @@ body.menuclose{
 				}
 			}
 		}
+
 		.taskContainer{
 			padding-top: 35px;
 			&>div{
