--- a/css/media768.css
+++ b/css/media768.css
@@ -86,42 +86,50 @@
   }
 }
 @media (max-width: 600px) {
-  .content .contitem .newsContainer > .cont .banner {
+  body .content {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+  }
+  body .content .contitem .newsContainer > .cont .banner {
     display: none;
   }
-  .content .contitem .newsContainer > .cont .news {
+  body .content .contitem .newsContainer > .cont .news {
     width: 100%;
   }
-  .content .contitem .taskContainer {
+  body .content .contitem .taskContainer {
     padding-top: 35px;
   }
-  .content .contitem .taskContainer > div {
+  body .content .contitem .taskContainer > div {
     width: 100%;
     height: 100%;
     padding: 10px;
   }
-  .content .contitem .taskContainer > div > div {
+  body .content .contitem .taskContainer > div > div {
     width: 25%;
     padding: 10px;
     float: left;
   }
-  .content .contitem .taskContainer > div .item {
+  body .content .contitem .taskContainer > div .item {
     font-size: 15px;
   }
-  .content .contitem .taskContainer > div .item.newMsg::before {
+  body .content .contitem .taskContainer > div .item.newMsg::before {
     width: 20px;
     height: 20px;
     line-height: 20px;
     font-size: 12px;
   }
-  .content .contitem#taskblock {
+  body .content .contitem#taskblock {
     height: 200px;
   }
-  .content .contitem#documentblock,
-  .content .contitem#scheduleblock,
-  .content .contitem#stockblock {
+  body .content .contitem#documentblock,
+  body .content .contitem#scheduleblock,
+  body .content .contitem#stockblock {
     width: 100%;
     height: 200px;
     padding: 0 0 20px;
+  }
+  #widgetcenter > .cont > div {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
