--- a/css/reset.less
+++ b/css/reset.less
@@ -3,24 +3,24 @@
 }
 // @font-face {
 //   font-family:segoe;
-//   src:url('../fonts/segoeui.woff');
+//   src:url('./fonts/segoeui.woff');
 //   font-weight: normal;
 // }
 // @font-face{
 //   font-family: segoe;
-//   src: url('../fonts/segoeuil.woff');
+//   src: url('./fonts/segoeuil.woff');
 //   font-weight:300;
 // }
 body,div,a,h1,h2,h3,h4,h5,h6,p,dd,dl,dt,ul{padding:0;margin:0;}
 body,input,button{
   background-color: #fff;
   color: #555;
-  font-family: segoe,"Open Sans","Helvetica Neue",Helvetica,Arial,STHeiti,sans-serif;
+  font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,STHeiti,sans-serif;
   font-size: 14px;
   // line-height: 1.5;
   position:relative;
   margin:0 auto;
-  font-weight: 300;
+  font-weight: normal;
   -webkit-appearance : none ;
 }
 textarea{
