--- a/css/media768.less
+++ b/css/media768.less
@@ -145,17 +145,20 @@
 				}
 				&#documentblock,&#scheduleblock,&#stockblock{
 					width: 100%;
-					height: 200px;
+					height: 300px;
 					padding: 0 0 20px;
 				}
 			}
+			.slideBox{
+				width: 100% !important;
+			}
 		}
-	}
-	#widgetcenter{
-		&>.cont{
-			&>div{
+		#widgetcenter{
+			&>.cont{
+				&>div{
 				padding-left: 10px;
 				padding-right: 10px;
+				}
 			}
 		}
 	}
