--- a/css/public.css
+++ b/css/public.css
@@ -193,11 +193,18 @@ body .leftbar > .menu > li {
   cursor: pointer;
 }
 body .leftbar > .menu > li > a {
+  position: relative;
   display: block;
   height: 44px;
   width: 100%;
   line-height: 44px;
-  padding-left: 20px;
+  padding-left: 60px;
+}
+body .leftbar > .menu > li > a > i {
+  position: absolute;
+  left: 18px;
+  top: 10px;
+  font-size: 24px;
 }
 body .leftbar > .menu > li > .submenu {
   height: auto;
@@ -228,7 +235,13 @@ body.menuclose .topbar {
 body.menuclose .leftbar {
   width: 72px;
 }
-body.menuclose .leftbar > .menu > li * {
+body.menuclose .leftbar > .menu > li > a {
+  padding-left: 72px;
+}
+body.menuclose .leftbar > .menu > li > a > i {
+  font-size: 30px;
+}
+body.menuclose .leftbar > .menu > li > a > span {
   display: none;
 }
 body.menuclose .content {
