--- a/css/public.less
+++ b/css/public.less
@@ -192,7 +192,6 @@ body{
 		z-index:5;
 		&>.menu{
 			width:100%;
-			// overflow-y: scroll;
 			height: auto;
 			max-height: 100%;
 			color:#e8e8e8;
@@ -203,11 +202,21 @@ body{
 				overflow: hidden;
 				cursor:pointer;
 				&>a{
+					position: relative;
 					display: block;
 					height:44px;
 					width:100%;
 					line-height: 44px;
-					padding-left: 20px;
+					padding-left: 60px;
+					&>i{
+						position: absolute;
+						left: 18px;
+						top:10px;
+						font-size: 24px;
+					}
+					&>span{
+						// width:100%;
+					}
 				}
 				&>.submenu{
 					height:auto;
@@ -248,8 +257,14 @@ body.menuclose{
 		width:@menuw2;
 		&>.menu{
 			&>li{
-				*{
-					display: none;
+				&>a{
+					padding-left: 72px;
+					&>i{
+						font-size: 30px;
+					}
+					&>span{
+						display: none;
+					}
 				}
 			}
 		}
