--- a/css/public.less
+++ b/css/public.less
@@ -261,6 +261,7 @@ body.menuclose{
 					padding-left: 72px;
 					&>i{
 						font-size: 30px;
+						left:21px;
 					}
 					&>span{
 						display: none;
