--- a/css/media768.less
+++ b/css/media768.less
@@ -5,7 +5,13 @@
 @lightred:#eb1e25;
 // 1025以下，900以上 使用ipad横版布局
 @media(max-width:1025px){
-
+	body{
+		.topbar{
+			.menutoggle{
+				display: none;
+			}
+		}
+	}
 }
 // 900以下，600以上 使用ipad竖版布局
 @media(max-width:900px){
