--- a/css/public.css
+++ b/css/public.css
@@ -61,13 +61,31 @@ body .topbar {
   z-index: 6;
   line-height: 60px;
 }
-body .topbar > img {
+body .topbar > .logobox {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 60px;
+  width: 214px;
+  overflow: hidden;
+  background-color: #d02b1e;
+}
+body .topbar > .logobox > .logo1 {
   position: absolute;
   left: 0;
   top: 0;
   display: block;
   height: 60px;
   width: 72px;
+  padding: 14px 18px;
+}
+body .topbar > .logobox > .logo2 {
+  position: absolute;
+  left: 65px;
+  top: 22px;
+  display: block;
+  height: 16px;
+  width: 130px;
 }
 body .topbar .menutoggle {
   display: inline-block;
@@ -126,7 +144,7 @@ body .topbar .myfavorite .alertpanel .addbtn {
   color: #ee4f3c;
 }
 body .topbar .username .alertpanel {
-  width: 140px;
+  width: 130px;
   height: 84px;
   right: 0px;
   top: 30px;
@@ -134,8 +152,10 @@ body .topbar .username .alertpanel {
 body .topbar .username .alertpanel > div {
   height: 50%;
   width: 100%;
+  padding: 0 5px;
   line-height: 41px;
   border-bottom: 1px solid #ddd;
+  cursor: pointer;
 }
 body .topbar .username .alertpanel > div:last-child {
   border-bottom: none;
@@ -143,18 +163,24 @@ body .topbar .username .alertpanel > div:last-child {
 body .topbar .username .alertpanel > div:hover {
   background-color: #f4f4f4;
 }
+body .topbar .username .alertpanel > div > i {
+  color: #333;
+  margin: 0 10px;
+}
 body .topbar .topright {
   float: right;
   height: 60px;
 }
 body .topbar .topright .changetheme {
   display: inline-block;
-  height: 30px;
-  width: 30px;
-  border-radius: 16px;
+  height: 28px;
+  width: 28px;
+  border-radius: 14px;
   text-align: center;
-  line-height: 30px;
-  background-color: #189cbb;
+  line-height: 28px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #1cb6db;
 }
 body .topbar .topright .username {
   position: relative;
@@ -195,7 +221,8 @@ body .leftbar {
   width: 214px;
   height: 100%;
   padding-top: 60px;
-  background-color: #281414;
+  overflow-y: scroll;
+  background-color: #2f1717;
   z-index: 5;
 }
 body .leftbar > .menu {
@@ -209,7 +236,7 @@ body .leftbar > .menu > li {
   height: 44px;
   margin: 8px 0;
   width: 100%;
-  overflow: hidden;
+  overflow: hidden !important;
   cursor: pointer;
 }
 body .leftbar > .menu > li > a {
@@ -227,6 +254,7 @@ body .leftbar > .menu > li > a > i {
   font-size: 24px;
 }
 body .leftbar > .menu > li > .submenu {
+  display: none;
   height: auto;
   width: 100%;
   padding-left: 60px;
@@ -237,8 +265,14 @@ body .leftbar > .menu > li > .submenu > li {
   line-height: 35px;
   cursor: pointer;
 }
+body .leftbar > .menu > li.open > .submenu {
+  display: block;
+}
 body .leftbar > .menu > li.set > a {
   background-color: #d02b1e;
+}
+body .leftbar > .menu > li.set > .submenu {
+  display: block;
 }
 body .content {
   width: 100%;
@@ -252,36 +286,56 @@ body .content {
 body.menuclose .topbar {
   padding-left: 97px;
 }
-body.menuclose .leftbar {
+body.menuclose .topbar > .logobox {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 60px;
   width: 72px;
 }
+body.menuclose .topbar > .logobox > .logo2 {
+  display: none;
+}
+body.menuclose .leftbar {
+  width: 72px;
+  overflow-y: visible;
+}
 body.menuclose .leftbar > .menu > li {
-  height: 60px;
+  height: 44px !important;
+  overflow: visible !important;
+  margin: 16px 0;
 }
 body.menuclose .leftbar > .menu > li > a {
-  height: 60px;
   padding-left: 72px;
 }
 body.menuclose .leftbar > .menu > li > a > i {
+  top: 5px;
   font-size: 30px;
-  top: 15px;
 }
 body.menuclose .leftbar > .menu > li > a > span {
   display: none;
 }
 body.menuclose .leftbar > .menu > li > .submenu {
-  position: absolute;
-  left: 72px;
-  top: 0;
-  height: auto;
-  width: 100%;
-  padding-left: 60px;
+  display: none;
 }
-body.menuclose .leftbar > .menu > li > .submenu > li {
-  width: 100%;
-  height: 35px;
-  line-height: 35px;
-  cursor: pointer;
+body.menuclose .leftbar > .menu > li.set:hover > a > span {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 72px;
+  width: 150px;
+  height: 44px;
+  padding-left: 24px;
+  background-color: #d02b1e;
+}
+body.menuclose .leftbar > .menu > li.set:hover > .submenu {
+  display: block;
+  position: absolute;
+  top: 44px;
+  left: 72px;
+  width: 150px;
+  padding-left: 40px;
+  background-color: #d02b1e;
 }
 body.menuclose .content {
   padding-left: 77px;
@@ -474,7 +528,7 @@ body.menuclose .content {
   height: 100%;
   text-align: center;
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
   border-radius: 5px;
   background-color: #fdbd15;
   position: relative;
