--- a/css/public.less
+++ b/css/public.less
@@ -112,11 +112,6 @@ body{
 				height:30px;
 				cursor:pointer;
 			}
-			&.open{
-				.alertpanel{
-					display: block;
-				}
-			}
 		}
 		.myfavorite{
 			.alertpanel{
@@ -185,6 +180,53 @@ body{
 				font-size: 16px;
 				color: #fff;
 				background-color: lighten(#189cbb,7%);
+				i{
+					cursor:pointer;				
+				}
+				.alertpanel{
+					width: 180px;
+					height: 78px;
+					padding:0 10px;
+					top: 45px;
+					&>.title{
+						width: 100%;
+						height: 38px;
+						line-height: 38px;
+						font-size: 13px;
+						color: #555;
+						text-indent: 8px;
+						text-align: left;
+					}
+					&>.itembox{
+						width: 100%;
+						height: 40px;
+						&>.item{
+							width: 22px;
+							height:22px;
+							float: left;
+							margin: 0 8px;
+							border-radius: 12px;
+							background-color: #b4bdc9;
+							cursor: pointer;
+							&:nth-child(2){
+								background-color: lighten(@red,10%);
+							}
+							&:nth-child(3){
+								background-color: #64c7db;
+							}
+							&:nth-child(4){
+								background-color: #b4bdc9;
+								&>img{
+									height: 14px;
+									position: relative;
+									top:4px;
+									display: block;
+									margin: 0 auto;
+								}
+							}
+						}
+					}
+				}
 			}
 			.username{
 				position: relative;
@@ -223,6 +265,11 @@ body{
 		border: 1px solid #ddd;
 		box-shadow: 5px 5px 0px rgba(0,0,0,0.1);
 	}
+	.open{
+		.alertpanel{
+			display: block;
+		}
+	}
 	.leftbar{
 		position:absolute;
 		left:0;top:0;
@@ -260,6 +307,17 @@ body{
 					&>span{
 						// width:100%;
 					}
+					&>div{
+						position: absolute;
+						height:100%;
+						width:auto;
+						right: 0px;
+						top:0px;
+						font-size: 24px;
+						&>i.fa-angle-down{
+							display: none;
+						}
+					}
 				}
 				&>.submenu{
 					display: none;
@@ -275,6 +333,16 @@ body{
 				}
 			}
 			&>li.open{
+				&>a{
+					&>div{
+						&>i.fa-angle-right{
+							display: none;
+						}
+						&>i.fa-angle-down{
+							display: inline-block;
+						}
+					}
+				}
 				&>.submenu{
 					display: block;
 				}
@@ -327,6 +395,9 @@ body.menuclose{
 						font-size: 30px;
 					}
 					&>span{
+						display: none;
+					}
+					&>div{
 						display: none;
 					}
 				}
