增加了鼠标拖动改变顺序功能

--- a/css/media768.less
+++ b/css/media768.less
@@ -19,6 +19,7 @@
 		height: auto;
 	}
 	body{
+		overflow: hidden;
 		height: auto;
 		.topbar{
 			width: 100%;
@@ -26,9 +27,71 @@
 			padding: 0;
 			padding-left: @menuw2 !important;
 			background-color: @lightred;
-			&>img{
-				width: @menuw2;
-				height: 100%;
+			&>.logobox{
+				background-color: #eb1e25;
+				&>.logo2{
+					display: none;
+				}
+			}
+			.menutoggle{
+				display: inline-block;
+				color: #fff;
+				margin-left: 15px;
+				font-size: 22px;
+			}
+			.myfavorite{
+				position: absolute;
+				right: 152px;
+				top: 16px;
+				.fa-heart-o{
+					display: inline-block;
+					color: #fff;
+				}
+				&>span{
+					&>span{
+						display: none;
+					}
+					&>i{
+						font-size: 25px;
+					}
+				}
+			}
+			.topright{
+				padding-right: 30px;
+				width: 136px;
+				.changetheme{
+					background: none;
+					font-size: 25px;
+					.alertpanel{
+						right:30px;
+					}
+				}
+				.username{
+					&>span{
+						.big{
+							display: none;
+						}
+						.small{
+							display: block;
+							&>i{
+								display: inline-block;
+								font-size: 25px;
+								color: #fff;
+							}
+						}
+					}
+				}
+
+			}
+			.myfavorite{
+				.alertpanel{
+					position: fixed;
+					top: 60px;
+					left: 0;
+					margin-left: auto;
+					margin-right: auto;
+					right: 0px;
+				}
 			}
 		}
 		.leftbar{
@@ -39,6 +102,7 @@
 		}
 	}
     body.menuclose{
+		overflow: scroll;
     	.leftbar{
 			display: none;
     	}
@@ -49,9 +113,9 @@
 			height:auto;
 			overflow: hidden;
 			position: relative;
-			padding-left: 35px;
+			padding-left: 30px;
 			padding-top: 76px;
-			padding-right: 35px;
+			padding-right: 30px;
 			padding-bottom: 16px;
 		}
 	}
