--- a/css/reset.less
+++ b/css/reset.less
@@ -12,7 +12,7 @@
 //   font-weight:300;
 // }
 body,div,a,h1,h2,h3,h4,h5,h6,p,dd,dl,dt,ul{padding:0;margin:0;}
-body,input,button{
+body,input[type="text"],button{
   background-color: #fff;
   color: #555;
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,STHeiti,sans-serif;
