--- a/css/media768.less
+++ b/css/media768.less
@@ -6,6 +6,7 @@
 // 1025以下，900以上 使用ipad横版布局
 @media(max-width:1025px){
 	body{
+		overflow-y: scroll;
 		.topbar{
 			.menutoggle{
 				display: none;
@@ -168,6 +169,9 @@
 				padding-left: 20px;
 			}
 		}
+	}
+	.contitem[id^='origin']{
+		display: none;
 	}
 }
 
