姑且改了一下滚动效果

--- a/css/media768.css
+++ b/css/media768.css
@@ -36,8 +36,11 @@
     padding-right: 35px;
     padding-bottom: 16px;
   }
-  .slideBox {
-    width: 150% !important;
+  .slideContainer > div {
+    overflow-x: auto;
+  }
+  .slideContainer .slideBox {
+    width: 150%;
   }
   .content .contitem {
     width: 100%;
