--- a/css/media768.less
+++ b/css/media768.less
@@ -49,9 +49,14 @@
 			padding-bottom: 16px;
 		}
 	}
-	.slideBox{
-		width: 150% !important;
-	}
+	.slideContainer{
+			&>div{
+				overflow-x: auto;
+			}
+			.slideBox{
+				width: 150%;
+			}
+		}
 	.content{
 		.contitem{
 			width: 100%;
