--- a/css/public.css
+++ b/css/public.css
@@ -248,7 +248,7 @@ body.menuclose .content {
 .slideContainer > div {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: hidden;
 }
 .slideContainer .slideBox {
   width: 100%;
