--- a/css/public.less
+++ b/css/public.less
@@ -271,7 +271,7 @@ body.menuclose{
 			&>div{
 				width: 100%;
 				height: 100%;
-				overflow: scroll;
+				overflow: hidden;
 			}
 			.slideBox{
 				width: 100%;
